frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_unbounded_text_type_array_create
     (Length : int) return Symbol_Type_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_unbounded_text_type_array_create";

   procedure ada_unbounded_text_type_array_inc_ref
     (A : Symbol_Type_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_unbounded_text_type_array_inc_ref";

   procedure ada_unbounded_text_type_array_dec_ref
     (A : Symbol_Type_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_unbounded_text_type_array_dec_ref";

      ----------
      -- Misc --
      ----------

   function ada_get_last_exception return ada_exception_Ptr with
      Export        => True,
      Convention    => C,
      External_Name => "ada_get_last_exception";
      --  Return exception information for the last error that happened in the
      --  current thread. Will be automatically allocated on error and free'd
      --  on the next error.

   procedure Clear_Last_Exception;
   --  Free the information contained in Last_Exception

   procedure Set_Last_Exception (Exc : Exception_Occurrence);
   --  Free the information contained in Last_Exception and replace it with
   --  newly allocated information from Exc.

   function ada_token_kind_name (Kind : int) return chars_ptr with
      Export        => True,
      Convention    => C,
      External_Name => "ada_token_kind_name";
      --  Return a human-readable name for a token kind.
      --
      --  The returned string is dynamically allocated and the caller must free
      --  it when done with it.
      --
      --  If the given kind is invalid, return ``NULL`` and set the last
      --  exception accordingly.

   procedure ada_token_next
     (Token : ada_token; Next_Token : access ada_token) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_token_next";
      --  Return a reference to the next token in the corresponding analysis
      --  unit.

   procedure ada_token_previous
     (Token : ada_token; Previous_Token : access ada_token) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_token_previous";
      --  Return a reference to the previous token in the corresponding
      --  analysis unit.

   function ada_token_range_text
     (First, Last : ada_token; Text : access ada_text) return int with
      Export        => True,
      Convention    => C,
      External_Name => "ada_token_range_text";
      --  Compute the source buffer slice corresponding to the text that spans
      --  between the ``First`` and ``Last`` tokens (both included). This
      --  yields an empty slice if ``Last`` actually appears before ``First``.
      --  Put the result in ``RESULT``.
      --
      --  This returns 0 if ``First`` and ``Last`` don't belong to the same
      --  analysis unit. Return 1 if successful.

   function ada_token_is_equivalent
     (Left : ada_token; Right : ada_token) return ada_bool with
      Export        => True,
      Convention    => C,
      External_Name => "ada_token_is_equivalent";
      --  Return whether ``L`` and ``R`` are structurally equivalent tokens.
      --  This means that their position in the stream won't be taken into
      --  account, only the kind and text of the token.

   procedure ada_entity_image
     (Ent : ada_base_entity_Ptr; Result : access ada_text) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_entity_image";
      --  Return a representation of this entity as a string.

      ---------------------------------------
      -- Kind-specific AST node primitives --
      ---------------------------------------

      --  All these primitives return their result through an OUT parameter.
      --  They return a boolean telling whether the operation was successful
      --  (it can fail if the node does not have the proper type, for
      --  instance). When an AST node is returned, its ref-count is left as-is.

   function ada_ada_node_p_declarative_scope
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_declarative_scope";
      --  Return the scope of definition of this basic declaration.

   function ada_ada_node_p_complete
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_completion_item_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_complete";
      --  Return possible completions at this point in the file.

   function ada_ada_node_p_valid_keywords
     (Node : ada_base_entity_Ptr;

      Value_P : access ada_unbounded_text_type_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_valid_keywords";
      --  Return the list of keywords that are valid at this point in the file.
      --
      --  .. note:: This is work in progress. It will return all keywords for
      --  now,
      --     without looking at the context.

   function ada_ada_node_p_generic_instantiations
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_generic_instantiations";
      --  Return the potentially empty list of generic package/subprogram
      --  instantiations that led to the creation of this entity. Outer-most
      --  instantiations appear last.

   function ada_ada_node_p_semantic_parent
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_semantic_parent";
      --  Return the semantic parent for this node, if applicable, null
      --  otherwise.

   function ada_ada_node_p_parent_basic_decl
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_parent_basic_decl";
      --  Return the parent basic decl for this node, if applicable, null
      --  otherwise.
      --
      --  .. note:: If the parent BasicDecl of the given node is a generic
   --     declaration, this call will return the instantiation from which the
      --     node was retrieved instead, if any.

   function ada_ada_node_p_filter_is_imported_by
     (Node : ada_base_entity_Ptr;
Units :
ada_analysis_unit_array;
      Transitive :
ada_bool;
Value_P : access ada_analysis_unit_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_filter_is_imported_by";
      --  Filters out among the list of given units those that cannot refer to
      --  the unit in which this node lies. If transitive is True, the whole
      --  transitive closure of imports will be used to find a reference to
      --  the unit of this node.

   function ada_ada_node_p_xref_entry_point
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_xref_entry_point";
      --  Designates entities that are entry point for the xref solving
      --  infrastructure. If this returns true, then resolve_names can
      --  be called on it.
      --
      --  .. note:: For convenience, and unlike what is defined in the ARM wrt.
   --     complete contexts for name resolution, ``xref_entry_points`` can be
      --     nested.

   function ada_ada_node_p_resolve_names
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_resolve_names";
      --  This will resolve names for this node. If the operation is
      --  successful, then type_var and ref_var will be bound on
      --  appropriate subnodes of the statement.

   function ada_ada_node_p_standard_unit
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_analysis_unit)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_standard_unit";
      --  Static method. Return the analysis unit corresponding to the Standard
      --  package.

   function ada_ada_node_p_std_entity
     (Node : ada_base_entity_Ptr;
Sym        : access constant ada_symbol_type;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_std_entity";
      --  Static property. Return an entity from the standard package with name
      --  `sym`.

   function ada_ada_node_p_bool_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_bool_type";
      --  Static method. Return the standard Boolean type.

   function ada_ada_node_p_int_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_int_type";
      --  Static method. Return the standard Integer type.

   function ada_ada_node_p_universal_int_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_universal_int_type";
      --  Static method. Return the standard Universal Integer type.

   function ada_ada_node_p_universal_real_type
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_universal_real_type";
      --  Static method. Return the standard Universal Real type.

   function ada_ada_node_p_top_level_decl
     (Node : ada_base_entity_Ptr;
Unit :
ada_analysis_unit;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_top_level_decl";
      --  Static method. Get the top-level decl in ``unit``. This is the body
      --  of a Subunit, or the item of a ``LibraryItem``.

   function ada_ada_node_p_choice_match
     (Node : ada_base_entity_Ptr;
Value      : access constant ada_big_integer;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_choice_match";
      --  Assuming that self is a choice expression (such as what can appear
      --  in an alternative of a case statement or in the RHS of a membership
      --  expression, this property returns whether the given value satisfies
      --  it.
      --
      --  .. ATTENTION:: This is an experimental feature, so even if it is
      --  exposed
      --     to allow experiments, it is totally unsupported and the API and
      --     behavior are very likely to change in the future.

   function ada_ada_node_p_gnat_xref
     (Node : ada_base_entity_Ptr;
Imprecise_Fallback :
ada_bool;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_p_gnat_xref";
      --  Return a cross reference from this name to a defining identifier,
      --  trying to mimic GNAT's xrefs as much as possible.
